<resources>
    <string name="app_name">PocketCoach</string>

    // Strings for the Log In Status in the Main Activity
    <string name="preview_text_login">LOGIN_STATUS</string>
    <string name="logged_in">Willkommen bei </string>
    <string name="not_logged_in">Nicht eingeloggt</string>

    // Main Activity String
    <string name="exercise_info">Wähle eine Übung</string>
    <string name="imprint">Impressum</string>
    <string name="button_record_history_text">Dein Trainingsverlauf</string>

    //Log In Activity UI Strings
    <string name="info_text">Logge dich ein oder registriere dich!</string>
    <string name="button_log_in_text">Einloggen</string>
    <string name="button_register_text">Registrieren</string>
    <string name="forgot_password">Password vergessen?</string>
    <string name="password_hint">Passwort</string>
    <string name="email_hint">E-Mail Adresse</string>

    // Strings for the Log In Process
    <string name="verify_mail">Die verifikations Mail wurde verschickt. Bitte bestätige sie in deinem Postfach. </string>
    <string name="successful_log_in">Login war erfolgreich</string>
    <string name="no_successful_log_in">Du musst erst deine Email Adresse über den Link in deinem Postfach bestätigen.</string>

    // Strings for the Log Out
    <string name="log_out_info_positiv">Sie wurden erfolgreich ausgeloggt</string>
    <string name="log_out_info_negativ">Sie sind bereits ausgeloggt</string>

    // Strings to reset the Password
    <string name="reset_dialog_titel">Password zurücksetzten</string>
    <string name="positiv_button_text">Passwort zurücksetzten</string>
    <string name="negativ_button_text">Zurück</string>
    <string name="warning_no_email_text">Bitte gib deine Email Adresse an</string>
    <string name="email_send_info">Die Email zum zurücksetzten des Passworts wurde versendet</string>

    // Strings for the Choose... Activitys
    <string name="pull_up_titel_text">PULL UP</string>
    <string name="ChooseActivityTitleText">Was möchtest du trainieren?</string>
    <string name="maxButton_text">Maximalkraft</string>
    <string name="ausdauerButton_text">Kraftausdauer</string>
    <string name="speedButton_text">Schnellkraft</string>
    <string name="hyperButton_text">Hypertrophie</string>
    <string name="MaxTestButton_">Maximalkraft berechnen</string>

    // String for One Rep Max Calculation
    <string name="hint_weight">Trainingsgewicht eingeben</string>
    <string name="hint_rep">Wiederholungen eingeben</string>
    <string name="hint_calc_one_rep_max">1RM berechnen</string>
    <string name="warning_to_high_reps">Wähle ein schwerers Gewicht. Messungen mit über 20 Wiederholungen können nicht verarbeitet werden! </string>
    <string name="return_text_one_rep_max">Dein Maximalgewicht beträgt: </string>
    <string name="kilogramm"> Kilogramm</string>

    // Strings for the RecordHistory
    <string name="RecordHistoryChooseText">Trainingstag auswählen</string>
</resources>